add text w name

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     
+    <!-- Google Font  -->
+    <link href="https://fonts.googleapis.com/css?family=Prompt|Signika&display=swap" rel="stylesheet">
+
     <!-- CSS -->
     <link rel="stylesheet" href="./Assets/css/style.css">
     <title>Marc Strong Portfolio</title>
@@ -22,14 +25,24 @@
     <main class="container-fluid main-content">
 
       <div class="card bg-dark">
-        <img src="./Assets/Images/Destiny.jpg" class="card-img" alt="Cerro Companario">
+        <img src="./Assets/Images/Destiny.jpg" class="card-img img-fluid" alt="Cerro Companario">
         <div class="card-img-overlay">
           <!-- Portfolio header results-->
           <header class="row">
+            <div class="col-6"></div>
             <header class="col">
-              <h1 class="text-center">Marc Strong</h1>   
+              <h1>Marc Strong</h1>   
+              <h1>I'm a Web Developer</h1> 
+              <h1>Here is your destination</h1> 
             </header>
           </header>
+
+          <div>
+            <button type="button" class="btn btn-primary btn-lg">Large button</button>
+            <button type="button" class="btn btn-secondary btn-lg">Large button</button>
+
+          </div>
+
           <p class="card-text"></p>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           <p class="card-text">Last updated 3 mins ago</p>
@@ -41,7 +54,9 @@
     
     <!-- Portfolio footer -->
     <footer class="footer">
+      <div class="container">
       <p><span class="glyphicon glyphicon-copyright-mark"></span> 2020 Copyright</p> 
+    </div>
     </footer>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
