add 3 more buttons, include button names, add contact info section w number and email, change footer color, adjsut text color, active button green

--- a/index.html
+++ b/index.html
@@ -31,16 +31,29 @@
           <header class="row">
             <div class="col-6"></div>
             <header class="col">
+              <h1>Here.. is your destination</h1> 
               <h1>Marc Strong</h1>   
-              <h1>I'm a Web Developer</h1> 
-              <h1>Here is your destination</h1> 
+              <h1>Full-stack web developer</h1> 
             </header>
           </header>
 
-          <div>
-            <button type="button" class="btn btn-primary btn-lg">Large button</button>
-            <button type="button" class="btn btn-secondary btn-lg">Large button</button>
-
+          <div >
+            <section id="contact">
+              <h2>Contact Info</h2>
+              <ul>
+                <li>
+                  <strong>Phone:</strong> <a href="#">847-668-5177</a>
+                </li>
+                <li>
+                  <strong>Email:</strong> <a href="#">marcalexanderstrong@gmail.com</a>
+                </li>
+              </ul>
+            </section>
+            <button type="button" class="btn btn-secondary btn-lg active">Portfolio</button>
+            <button type="button" class="btn btn-secondary btn-lg">Projects</button>
+            <button type="button" class="btn btn-secondary btn-lg">GitHub</button>
+            <button type="button" class="btn btn-secondary btn-lg">LinkedIn</button>
+            <button type="button" class="btn btn-secondary btn-lg">Resume</button>
           </div>
 
           <p class="card-text"></p>
