add link to LinkedIn button to take user to LinkedIn profile

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                 </li>
               </ul>
             </section>
-            <button type="button" class="btn btn-secondary btn-lg active">Portfolio</button>
-            <button type="button" class="btn btn-secondary btn-lg">Projects</button>
+            <button type="button" class="btn btn-secondary btn-lg active">About Me</button>
+            <button type="button" class="btn btn-secondary btn-lg">Portfolio</button>
             <button id="GitHub" type="button" class="btn btn-secondary btn-lg">GitHub</button>
-            <button type="button" class="btn btn-secondary btn-lg">LinkedIn</button>
+            <button id="linkedIn" type="button" class="btn btn-secondary btn-lg">LinkedIn</button>
             <button type="button" class="btn btn-secondary btn-lg">Resume</button>
           </div>
 
