--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <button type="button" class="btn btn-secondary btn-lg">Portfolio</button>
             <button id="GitHub" type="button" class="btn btn-secondary btn-lg">GitHub</button>
             <button id="linkedIn" type="button" class="btn btn-secondary btn-lg">LinkedIn</button>
-            <button type="button" class="btn btn-secondary btn-lg">Resume</button>
+            <a id="resume" href="./Assets/Images/MarcStrong.pdf">Resume</a>
           </div>
 
           <p class="card-text"></p>
