link portfolio to view portfolio.html

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               </ul>
             </section>
             <button type="button" class="btn btn-secondary btn-lg active">About Me</button>
-            <button type="button" class="btn btn-secondary btn-lg">Portfolio</button>
+            <button id="portfolio" type="button" class="btn btn-secondary btn-lg">Portfolio</button>
             <button id="GitHub" type="button" class="btn btn-secondary btn-lg">GitHub</button>
             <button id="linkedIn" type="button" class="btn btn-secondary btn-lg">LinkedIn</button>
             <a id="resume" href="./Assets/Images/MarcStrong.pdf">Resume</a>
