change navbar color

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                   <strong>Phone:</strong> <a href="#">847-668-5177</a>
                 </li>
                 <li>
-                  <strong>Email:</strong> <a href="#">marcalexanderstrong@gmail.com</a>
+                  <!-- https://www.w3schools.com/tags/tryit.asp?filename=tryhtml_link_mailto -->
+                  <strong>Email:</strong> <a href="mailto: marcalexanderstrong@gmail.com">marcalexanderstrong@gmail.com</a>
                 </li>
               </ul>
             </section>
