--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
       </header>
 
       <!-- Portfolio Web page nav bar -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center">
+      <nav class="navbar navbar-expand-lg navbar-light justify-content-center">
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" href="index.html">About Me</a>
