--- a/portfolio.html
+++ b/portfolio.html
@@ -29,10 +29,10 @@
       <nav class="navbar navbar-expand-lg navbar-light justify-content-center">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">About Me</a>
+            <a id="index" class="nav-link" href="index.html">About Me</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="./portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
+            <a id="active" class="nav-link" href="./portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
           </li>
         </ul>
       </nav>
