update porfolio.html project section colors, change main section color grey,  add background color for cards

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,13 +38,13 @@
       </nav>
 
       <!-- Portfolio Web page main portfolio content -->
-      <!-- Recreation activities -->
+      <!-- Projects -->
       <section class="row">
         <section class="col">
           <h2 class="text-center">Projects</h2>  
         </section>
       </section>
-
+<div class="wrapper">
       <!-- Portfolio Web page Whirlyball content -->      
       <section class="row p-2">
         <section class="col">
@@ -97,7 +97,7 @@
           </article>
         </section>
       </section>
-
+    </div>
     </main>
 
     <!-- Optional JavaScript -->
