add project card titles, add card linked deployed prejects

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
               <h2>Contact Info</h2>
               <ul>
                 <li>
-                  <strong>Phone:</strong> <a href="#">847-668-5177</a>
+                  <!-- https://www.000webhost.com/blog/make-a-phone-number-clickable -->
+                  <strong>Phone:</strong> <a href="tel:847-668-5177">847-668-5177</a>
                 </li>
                 <li>
                   <!-- https://www.w3schools.com/tags/tryit.asp?filename=tryhtml_link_mailto -->
