--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
         </section>
       </section>
 <div class="wrapper">
-      <!-- Portfolio Web page Whirlyball content -->      
+      <!-- Portfolio Scheduler content -->      
       <section class="row p-2">
         <section class="col">
           <article class="card mb-3" style="max-width: 700px;">
@@ -55,15 +55,15 @@
               </figcaption>
               <div class="col-md-12">
                 <summary class="card-body">
-                  <h5 class="card-title text-center">Whirls on Fire!!</h5>
-                  <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                  <h5 class="card-title text-center"><strong>Scheduler</strong></h5>
+                  <a href="https://strongmarc.github.io/HW5-Scheduler/">Link:  Scheduler</a>
                 </summary>
               </div>
             </div>
           </article>
         </section>
 
-        <!-- Portfolio Web page Volleyball content -->             
+        <!-- Portfolio Weather Dashboard content -->             
         <section class="col">
           <article class="card mb-3" style="max-width: 700px;">
             <div class="row">
@@ -72,15 +72,15 @@
               </figcaption>
               <div class="col-md-12">
                 <summary class="card-body">
-                  <h5 class="card-title text-center">Spike it like it's hot!!</h5>
-                  <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                  <h5 class="card-title text-center"><strong>Weather Dashboard</strong></h5>
+                  <a href="https://strongmarc.github.io/HW6-Weather/">Link: Weather Dashboard</a>
                 </summary>
               </div>
             </div>
           </article>
         </section>
       
-        <!-- Portfolio Web page Board Game content -->        
+        <!-- Portfolio Shaker content -->        
         <section class="col">
           <article class="card mb-3" style="max-width: 700px;">
             <div class="row">
@@ -89,8 +89,8 @@
               </figcaption>
               <div class="col-md-12">
                 <summary class="card-body">
-                  <h5 class="card-title text-center">7 Wonders!!</h5>
-                  <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                  <h5 class="card-title text-center"><strong>Shaker</strong></h5>
+                  <a href="https://json-d3rulo.github.io/project-1/">Link:  Shaker</a>
                 </summary>
               </div>
             </div>
