add project repositories

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,6 +57,8 @@
                 <summary class="card-body">
                   <h5 class="card-title text-center"><strong>Scheduler</strong></h5>
                   <a href="https://strongmarc.github.io/HW5-Scheduler/">Link:  Scheduler</a>
+                  <br>
+                  <a href="https://github.com/StrongMarc/HW5-Scheduler.git">Scheduler Repository</a>
                 </summary>
               </div>
             </div>
@@ -74,6 +76,8 @@
                 <summary class="card-body">
                   <h5 class="card-title text-center"><strong>Weather Dashboard</strong></h5>
                   <a href="https://strongmarc.github.io/HW6-Weather/">Link: Weather Dashboard</a>
+                  <br>
+                  <a href="https://github.com/StrongMarc/HW6-Weather.git">Weather Dashboard Repository</a>
                 </summary>
               </div>
             </div>
@@ -91,6 +95,8 @@
                 <summary class="card-body">
                   <h5 class="card-title text-center"><strong>Shaker</strong></h5>
                   <a href="https://json-d3rulo.github.io/project-1/">Link:  Shaker</a>
+                  <br>
+                  <a href="https://github.com/JSON-D3RULO/project-1.git">Shaker Repository</a>
                 </summary>
               </div>
             </div>
