--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
 <div class="wrapper">
       <!-- Portfolio Scheduler content -->      
       <section class="row p-2">
-        <section class="col">
+        <section class="col-sm-12 col-md-12 col-lg-4">
           <article class="card mb-3" style="max-width: 700px;">
             <div class="row">
               <figcaption class="col-md-12">
@@ -66,7 +66,7 @@
         </section>
 
         <!-- Portfolio Weather Dashboard content -->             
-        <section class="col">
+        <section class="col-sm-12 col-md-12 col-lg-4">
           <article class="card mb-3" style="max-width: 700px;">
             <div class="row">
               <figcaption class="col-md-12">
@@ -85,7 +85,7 @@
         </section>
       
         <!-- Portfolio Shaker content -->        
-        <section class="col">
+        <section class="col-sm-12 col-md-12 col-lg-4">
           <article class="card mb-3" style="max-width: 700px;">
             <div class="row">
               <figcaption class="col-md-12">
