index.html mobile responseiveness for button and a tag

--- a/index.html
+++ b/index.html
@@ -58,20 +58,17 @@
             <a id="resume" href="./Assets/Images/MarcStrong.pdf">Resume</a>
           </div>
 
-          <p class="card-text"></p>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <p class="card-text">Last updated 3 mins ago</p>
         </div>
       </div>
 
     
     </main>
     
-    <!-- Portfolio footer -->
+    <!-- About Me footer -->
     <footer class="footer">
-      <div class="container">
+
       <p><span class="glyphicon glyphicon-copyright-mark"></span> 2020 Copyright</p> 
-    </div>
+
     </footer>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
