--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
           <article class="card mb-3" style="max-width: 700px;">
             <div class="row">
               <figcaption class="col-md-12">
-                <img src="./Assets/Images/Scheduler.PNG" class="card-img" alt="Groupwhirly">
+                <img src="./Assets/Images/Scheduler.PNG" class="card-img" alt="Work Scheduler">
               </figcaption>
               <div class="col-md-12">
                 <summary class="card-body">
@@ -70,7 +70,7 @@
           <article class="card mb-3" style="max-width: 700px;">
             <div class="row">
               <figcaption class="col-md-12">
-                <img src="./Assets/Images/weather.PNG" class="card-img" alt="Beach Volleyball">
+                <img src="./Assets/Images/weather.PNG" class="card-img" alt="Weather Dashboard">
               </figcaption>
               <div class="col-md-12">
                 <summary class="card-body">
@@ -89,7 +89,7 @@
           <article class="card mb-3" style="max-width: 700px;">
             <div class="row">
               <figcaption class="col-md-12">
-                <img src="./Assets/Images/Collapse.PNG" class="card-img" alt="Serious Board Game">
+                <img src="./Assets/Images/Collapse.PNG" class="card-img" alt="Shaker">
               </figcaption>
               <div class="col-md-12">
                 <summary class="card-body">
