--- a/portfolio.html
+++ b/portfolio.html
@@ -89,7 +89,7 @@
           <article class="card mb-3" style="max-width: 700px;">
             <div class="row">
               <figcaption class="col-md-12">
-                <img src="./Assets/Images/Collapse.PNG" class="card-img" alt="Shaker">
+                <img src="./Assets/Images/Collapse.png" class="card-img" alt="Shaker">
               </figcaption>
               <div class="col-md-12">
                 <summary class="card-body">
