add background color for cards, portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
                 <img src="./Assets/Images/Scheduler.PNG" class="card-img" alt="Work Scheduler">
               </figcaption>
               <div class="col-md-12">
-                <summary class="card-body">
+                <summary class="project card-body">
                   <h5 class="card-title text-center"><strong>Scheduler</strong></h5>
                   <a href="https://strongmarc.github.io/HW5-Scheduler/">Link:  Scheduler</a>
                   <br>
@@ -73,7 +73,7 @@
                 <img src="./Assets/Images/weather.PNG" class="card-img" alt="Weather Dashboard">
               </figcaption>
               <div class="col-md-12">
-                <summary class="card-body">
+                <summary class="project card-body">
                   <h5 class="card-title text-center"><strong>Weather Dashboard</strong></h5>
                   <a href="https://strongmarc.github.io/HW6-Weather/">Link: Weather Dashboard</a>
                   <br>
@@ -92,7 +92,7 @@
                 <img src="./Assets/Images/Collapse.png" class="card-img" alt="Shaker">
               </figcaption>
               <div class="col-md-12">
-                <summary class="card-body">
+                <summary class="project card-body">
                   <h5 class="card-title text-center"><strong>Shaker</strong></h5>
                   <a href="https://json-d3rulo.github.io/project-1/">Link:  Shaker</a>
                   <br>
