portfolio.html, add border black so bar doesn't toggle when hover

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,66 +44,67 @@
           <h2 class="text-center">Projects</h2>  
         </section>
       </section>
-<div class="wrapper">
-      <!-- Portfolio Scheduler content -->      
-      <section class="row p-2">
-        <section class="col-sm-12 col-md-12 col-lg-4">
-          <article class="card mb-3" style="max-width: 700px;">
-            <div class="row">
-              <figcaption class="col-md-12">
-                <img src="./Assets/Images/Scheduler.PNG" class="card-img" alt="Work Scheduler">
-              </figcaption>
-              <div class="col-md-12">
-                <summary class="project card-body">
-                  <h5 class="card-title text-center"><strong>Scheduler</strong></h5>
-                  <a href="https://strongmarc.github.io/HW5-Scheduler/">Link:  Scheduler</a>
-                  <br>
-                  <a href="https://github.com/StrongMarc/HW5-Scheduler.git">Scheduler Repository</a>
-                </summary>
-              </div>
-            </div>
-          </article>
-        </section>
 
-        <!-- Portfolio Weather Dashboard content -->             
-        <section class="col-sm-12 col-md-12 col-lg-4">
-          <article class="card mb-3" style="max-width: 700px;">
-            <div class="row">
-              <figcaption class="col-md-12">
-                <img src="./Assets/Images/weather.PNG" class="card-img" alt="Weather Dashboard">
-              </figcaption>
-              <div class="col-md-12">
-                <summary class="project card-body">
-                  <h5 class="card-title text-center"><strong>Weather Dashboard</strong></h5>
-                  <a href="https://strongmarc.github.io/HW6-Weather/">Link: Weather Dashboard</a>
-                  <br>
-                  <a href="https://github.com/StrongMarc/HW6-Weather.git">Weather Dashboard Repository</a>
-                </summary>
+      <div class="wrapper">
+        <!-- Portfolio Scheduler content -->      
+        <section class="row p-2">
+          <section class="col-sm-12 col-md-12 col-lg-4">
+            <article class="card mb-3" style="max-width: 700px;">
+              <div class="row">
+                <figcaption class="col-md-12">
+                  <img src="./Assets/Images/Scheduler.PNG" class="card-img" alt="Work Scheduler">
+                </figcaption>
+                <div class="col-md-12">
+                  <summary class="project card-body">
+                    <h5 class="card-title text-center"><strong>Scheduler</strong></h5>
+                    <a href="https://strongmarc.github.io/HW5-Scheduler/">Link:  Scheduler</a>
+                    <br>
+                    <a href="https://github.com/StrongMarc/HW5-Scheduler.git">Scheduler Repository</a>
+                  </summary>
+                </div>
               </div>
-            </div>
-          </article>
-        </section>
-      
-        <!-- Portfolio Shaker content -->        
-        <section class="col-sm-12 col-md-12 col-lg-4">
-          <article class="card mb-3" style="max-width: 700px;">
-            <div class="row">
-              <figcaption class="col-md-12">
-                <img src="./Assets/Images/Collapse.png" class="card-img" alt="Shaker">
-              </figcaption>
-              <div class="col-md-12">
-                <summary class="project card-body">
-                  <h5 class="card-title text-center"><strong>Shaker</strong></h5>
-                  <a href="https://json-d3rulo.github.io/project-1/">Link:  Shaker</a>
-                  <br>
-                  <a href="https://github.com/JSON-D3RULO/project-1.git">Shaker Repository</a>
-                </summary>
+            </article>
+          </section>
+
+          <!-- Portfolio Weather Dashboard content -->             
+          <section class="col-sm-12 col-md-12 col-lg-4">
+            <article class="card mb-3" style="max-width: 700px;">
+              <div class="row">
+                <figcaption class="col-md-12">
+                  <img src="./Assets/Images/weather.PNG" class="card-img" alt="Weather Dashboard">
+                </figcaption>
+                <div class="col-md-12">
+                  <summary class="project card-body">
+                    <h5 class="card-title text-center"><strong>Weather Dashboard</strong></h5>
+                    <a href="https://strongmarc.github.io/HW6-Weather/">Link: Weather Dashboard</a>
+                    <br>
+                    <a href="https://github.com/StrongMarc/HW6-Weather.git">Weather Dashboard Repository</a>
+                  </summary>
+                </div>
               </div>
-            </div>
-          </article>
-        </section>
-      </section>
-    </div>
+            </article>
+          </section>
+        
+          <!-- Portfolio Shaker content -->        
+          <section class="col-sm-12 col-md-12 col-lg-4">
+            <article class="card mb-3" style="max-width: 700px;">
+              <div class="row">
+                <figcaption class="col-md-12">
+                  <img src="./Assets/Images/Collapse.png" class="card-img" alt="Shaker">
+                </figcaption>
+                <div class="col-md-12">
+                  <summary class="project card-body">
+                    <h5 class="card-title text-center"><strong>Shaker</strong></h5>
+                    <a href="https://json-d3rulo.github.io/project-1/">Link:  Shaker</a>
+                    <br>
+                    <a href="https://github.com/JSON-D3RULO/project-1.git">Shaker Repository</a>
+                  </summary>
+                </div>
+              </div>
+            </article>
+          </section>
+        </section> <!-- end row p-2-->
+      </div> <!-- end wrapper-->
     </main>
 
     <!-- Portfolio footer -->
