center cards on mobile

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,10 +45,10 @@
         </section>
       </section>
 
-      <div class="wrapper">
+      <div class="wrapper ">
         <!-- Portfolio Scheduler content -->      
         <section class="row p-2">
-          <section class="col-sm-12 col-md-12 col-lg-4">
+          <section class="col-sm-12 col-md-12 col-lg-4 card-text-center">
             <article class="card mb-3" style="max-width: 700px;">
               <div class="row">
                 <figcaption class="col-md-12">
@@ -104,7 +104,7 @@
             </article>
           </section>
         </section> <!-- end row p-2-->
-      </div> <!-- end wrapper-->
+      </div>  <!-- end wrapper -->
     </main>
 
     <!-- Portfolio footer -->
