portfolio, fix footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
   </head>
   
   <body>
-    <main class="container-fluid main-content">
+    <main class="container-fluid">
       <!-- Portfolio Web page header -->
       <header class="row">
         <header class="col">
@@ -105,13 +105,15 @@
           </section>
         </section> <!-- end row p-2-->
       </div>  <!-- end wrapper -->
+
+     
     </main>
 
-    <!-- Portfolio footer -->
-    <footer class="footer">
-
+     <!-- Portfolio footer -->
+     <footer class="footer">
+      <div class="container">
       <p><span class="glyphicon glyphicon-copyright-mark"></span> 2020 Copyright</p> 
-
+    </div>
     </footer>
 
     <!-- Optional JavaScript -->
