--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
   <body>
     <main class="container-fluid main-content">
 
-      <div class="card bg-dark">
+      <div class="back card bg-dark">
         <img src="./Assets/Images/Destiny.jpg" class="card-img img-fluid" alt="Cerro Companario">
         <div class="card-img-overlay">
           <!-- Portfolio header results-->
           <header class="row">
-            <div class="col-6"></div>
-            <header class="col">
+            <div class="col-lg-6 col-md-5"></div>
+            <header class="col-lg-6 col-md-7">
               <h1>Here.. is your destination</h1> 
+              <br>
               <h1>Marc Strong</h1>   
               <h1>Full-stack web developer</h1> 
             </header>
