add 3 project repos

--- a/portfolio.html
+++ b/portfolio.html
@@ -103,6 +103,63 @@
               </div>
             </article>
           </section>
+
+          <!-- Portfolio Note Taker content -->        
+          <section class="col-sm-12 col-md-12 col-lg-4">
+            <article class="card mb-3" style="max-width: 700px;">
+              <div class="row">
+                <figcaption class="col-md-12">
+                  <img src="./Assets/Images/noteTaker.PNG" class="card-img" alt="Note Taker">
+                </figcaption>
+                <div class="col-md-12">
+                  <summary class="project card-body">
+                    <h5 class="card-title text-center"><strong>Note Taker</strong></h5>
+                    <a href="https://warm-plains-86528.herokuapp.com/">Link:  Note Taker</a>
+                    <br>
+                    <a href="https://github.com/StrongMarc/Note-Taker.git">Note Taker Repository</a>
+                  </summary>
+                </div>
+              </div>
+            </article>
+          </section>
+
+          <!-- Portfolio Burger content -->        
+          <section class="col-sm-12 col-md-12 col-lg-4">
+            <article class="card mb-3" style="max-width: 700px;">
+              <div class="row">
+                <figcaption class="col-md-12">
+                  <img src="./Assets/Images/Burger.PNG" class="card-img" alt="Burger">
+                </figcaption>
+                <div class="col-md-12">
+                  <summary class="project card-body">
+                    <h5 class="card-title text-center"><strong>Burger</strong></h5>
+                    <a href="https://morning-chamber-69176.herokuapp.com/">Link:  Burger</a>
+                    <br>
+                    <a href="https://github.com/StrongMarc/burger.git">Burger Repository</a>
+                  </summary>
+                </div>
+              </div>
+            </article>
+          </section>
+
+          <!-- Portfolio StockWATCH content -->        
+          <section class="col-sm-12 col-md-12 col-lg-4">
+            <article class="card mb-3" style="max-width: 700px;">
+              <div class="row">
+                <figcaption class="col-md-12">
+                  <img src="./Assets/Images/stockWatch.PNG" class="card-img" alt="StockWATCH">
+                </figcaption>
+                <div class="col-md-12">
+                  <summary class="project card-body">
+                    <h5 class="card-title text-center"><strong>StockWATCH</strong></h5>
+                    <a href="https://thawing-sea-68388.herokuapp.com/">Link:  StockWATCH</a>
+                    <br>
+                    <a href="https://github.com/JSMBDevCorp/Project2.git">StockWATCH Repository</a>
+                  </summary>
+                </div>
+              </div>
+            </article>
+          </section>
         </section> <!-- end row p-2-->
       </div>  <!-- end wrapper -->
 
